[gd_scene load_steps=10 format=3 uid="uid://cx5dtlbl1bn1s"]

[ext_resource type="PackedScene" uid="uid://k31tra1nbrou" path="res://Raw Models/target.blend" id="1_kwvbt"]
[ext_resource type="Script" uid="uid://bae35xje4l05m" path="res://Scripts/targets.gd" id="1_ppp0u"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ppp0u"]
height = 0.308716
radius = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x8ta1"]
albedo_color = Color(0.628577, 0.842202, 0.542688, 1)

[sub_resource type="BoxMesh" id="BoxMesh_8wfa2"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="Curve" id="Curve_66nmu"]
_data = [Vector2(0, 1), 0.0, -1.0, 0, 1, Vector2(1, 0), -1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmrnu"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ndxbx"]
bg_color = Color(0.675381, 0.594206, 0.360976, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_ndxbx"]
viewport_path = NodePath("SubViewport")

[node name="Targets" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
script = ExtResource("1_ppp0u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00982666, 0)
shape = SubResource("CylinderShape3D_ppp0u")

[node name="target" parent="." instance=ExtResource("1_kwvbt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0108453, 0, -0.00357157)

[node name="Death Particles" type="CPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_x8ta1")
emitting = false
amount = 24
lifetime = 0.5
one_shot = true
explosiveness = 1.0
mesh = SubResource("BoxMesh_8wfa2")
emission_shape = 1
emission_sphere_radius = 0.5
spread = 180.0
initial_velocity_min = 10.0
initial_velocity_max = 10.0
scale_amount_curve = SubResource("Curve_66nmu")
color = Color(0.419431, 0.51462, 1, 1)

[node name="Timer" type="Timer" parent="."]

[node name="SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
offset_left = 112.0
offset_top = 401.0
offset_right = 400.0
offset_bottom = 428.0
theme_override_styles/background = SubResource("StyleBoxFlat_mmrnu")
theme_override_styles/fill = SubResource("StyleBoxFlat_ndxbx")
value = 50.0
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00757408, 0.020237, -8.84586e-10)
billboard = 1
texture = SubResource("ViewportTexture_ndxbx")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="finished" from="Death Particles" to="." method="_on_death_particles_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
